# Mochi

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: CI_AND_RELEASE_GUIDE.md
mochi_agent/: __main__.py  config.py  logging_config.py
mochi_agent/agent/: core.py  llm.py
mochi_agent/cli/: __init__.py  app.py
mochi_agent/mcp/: __init__.py  auth.py  client.py  config.py
mochi_agent/memory/: __init__.py  long_term.py  session.py
mochi_agent/skills/: __init__.py  executor.py  loader.py
mochi_agent/storage/: __init__.py  json_store.py  workspace.py
mochi_agent/tools/: __init__.py  file_ops.py  shell.py  web_search.py
mochi_assistant/: __main__.py  config.py
mochi_assistant/agent/: __init__.py  core.py  llm.py  prompts.py
mochi_assistant/cli/: app.py
mochi_assistant/mcp/: auth.py  client.py
mochi_assistant/memory/: __init__.py  long_term.py  session.py
mochi_assistant/skills/: executor.py  loader.py  schema.py
mochi_assistant/storage/: __init__.py  json_store.py  workspace.py
mochi_assistant/tools/: __init__.py  file_ops.py  shell.py  web_search.py
scripts/: build.py
