[project]
name = "mochi"
version = "0.1.0"
description = "Local Personal AI Assistant"
authors = [
    {name = "'LiangshouX'",email = "'xiaoliangshou.bit@gamil.com'"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.2.0",
    "langgraph>=0.1.0",
    "langchain-core>=0.2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
