[project]
name = "mochi-agent"
version = "0.1.0"
description = "Mochi — 本地运行的个人 AI 助手，基于 LangGraph 构建"
authors = [
    {name = "LiangshouX", email = "xiaoliangshou.bit@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
keywords = ["ai", "assistant", "langgraph", "langchain", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain>=0.2.0",
    "langgraph>=0.1.0",
    "langchain-core>=0.2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    "mcp>=1.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
]

[project.scripts]
mochi = "mochi_agent.cli.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
